--- a/src/app/folder-file-managment/file-explorer/file-explorer.component.css
+++ b/src/app/folder-file-managment/file-explorer/file-explorer.component.css
@@ -1,9 +1,12 @@
 
 .container {
   display: flex;
+  flex-direction: row;
   flex-wrap: wrap;
   gap: 15px;
+
 }
+
 .file {
   width: 100px;
   font-size: 8px;
@@ -23,7 +26,8 @@
 .fa-file-pdf,
 .fa-file-word,
 .fa-file-powerpoint,
-.fa-image {
+.fa-image, 
+.fa-file-zipper {
   font-size: 80px;
 }
 
@@ -39,8 +43,6 @@
   margin-bottom: 5px;
   transition: all 0.3s ease; 
   box-shadow: 0px 8px 16px rgba(0, 0, 0, 0.3);
- 
-
 }
 
 .selectAll:hover {
@@ -48,9 +50,8 @@
   color:white
 }
 
-.selectAllDiv{
-  justify-content: end;
-  margin-right:50px
+.file-explorer{
+  margin-top:30px
 }
 
 
@@ -88,7 +89,8 @@
 .navigation-container{
 display:flex;
 justify-content: space-between;
-align-items: center;
+align-items: top;
+gap:200px
 
 }
 span{
@@ -112,11 +114,11 @@ span{
 position:absolute;
 top:15px;
 left:26%;
+margin-top:15px
 }
 
 
 .search input[type="search"] {
-  width: 100%;
   padding: 10px 15px;
   border: 1px solid #cacaca;
   border-radius: 25px;
@@ -126,11 +128,11 @@ left:26%;
 }
 
 
-.search input[type="search"]:focus {
+.search input[type="search"] {
   border-color: #007bff;
   box-shadow: 0 0 10px rgba(0, 123, 255, 0.5);
   outline: none;
-  width: 800px; 
+  width: 900px; 
 }
 
 
@@ -146,9 +148,11 @@ left:26%;
   .fa-file-pdf,
   .fa-file-word,
   .fa-file-powerpoint , 
-  .fa-image{
+  .fa-image, 
+  .fa-file-zipper{
     font-size: 50px;
   }
+
   .container{
   gap:5px
   }
